Separate dev and test dependency groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.10"
 dependencies = []
 
 [tool.pytest.ini_options]
+addopts = "--cov=src/environment_variable --cov-report=term:skip-covered"
 testpaths = [
     "tests",
 ]
@@ -20,10 +21,7 @@ testpaths = [
 [tool.ruff]
 line-length = 120
 respect-gitignore = true
-src = [
-    "src",
-    "tests",
-]
+src = ["src"]
 
 [tool.ruff.format]
 indent-style = "space"
@@ -33,7 +31,15 @@ quote-style = "double"
 dev = [
     "ipython",
     "pre-commit",
-    "pytest>7",
     "ruff==0.15.2",
     "setuptools_scm>=8.0",
+    { include-group = "test" },
 ]
+
+test = [
+    "pytest-cov",
+    "pytest>=8",
+]
+
+[tool.setuptools_scm]
+# Technically unnecessary, but avoids a warning message.
